--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "deploy": "npm run build && npm run export"
+    "export": "next build && next export -o out",
+    "deploy": "npm run export && gh-pages -d out",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@types/node": "^20.17.57",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.0.0",
     "next": "^14.2.29",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
