--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next build && next export -o out",
-    "deploy": "npm run export && gh-pages -d out",
+    "deploy": "node scripts/deploy-to-gh-pages.js",
     "postbuild": "next-sitemap"
   },
   "dependencies": {
